# MaxCLI

./: =3.1.0  BOOTSTRAP_FIXES.md  COOLIFY_README.md  IDEAS.md  README.md  README_CSV_PROCESSING.md  bootstrap.sh  bootstrap_fix_test.sh  example_data.csv  main.py  max  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_bootstrap.sh
.cursor/: rules.mdc
.github/workflows/: test-bootstrap.yml  test-modules.yml
docs/: CSV_PROCESSING_README.md  TESTING.md  extending_maxcli.md
maxcli/: __init__.py  cli.py  config.py  ssh_backup.py  ssh_manager.py  ssh_rsync.py
maxcli.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
maxcli/commands/: __init__.py  coolify.py  devtools.py  docker.py  gcp.py  git.py  kubernetes.py  misc.py  openclaw.py  setup.py  weekly.py
maxcli/modules/: __init__.py  config_backup.py  config_manager.py  coolify_manager.py  devtools_manager.py  docker_manager.py  gcp_manager.py  git_manager.py  kubernetes_manager.py  misc_manager.py  module_manager.py  openclaw_manager.py  setup_manager.py  ssh_backup.py  ssh_manager.py  ssh_rsync.py
maxcli/saved_functions/: employee_analyzer.py
maxcli/utils/: __init__.py  interactive.py  system.py
tests/: README.md  __init__.py  conftest.py
tests/fixtures/modules/: docker_module.json  sample_module.json
tests/fixtures/test_data/: cli_outputs.json
tests/integration/: __init__.py  test_cli_integration.py
tests/unit/: __init__.py  test_cli.py  test_config.py  test_docker_manager.py  test_module_manager.py
tests/utils/: __init__.py  cli_test_runner.py  test_helpers.py
